--- a/css/styles.css
+++ b/css/styles.css
@@ -428,7 +428,7 @@ address {
     padding-top: 188px;
     padding-bottom: 188px;
     background-image: linear-gradient(to bottom,rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
-        url(/images/people-office\ 1.jpg);
+        url(/images/people-office1.jpg);
     background-repeat: no-repeat;
     background-size: 1440px;
     background-position: center;
@@ -440,5 +440,6 @@ address {
 }
 .footer-flex {
     display: flex;
+    flex-direction: row;
     gap: 120px;
 }
