--- a/css/styles.css
+++ b/css/styles.css
@@ -443,7 +443,7 @@ address {
     padding-top: 188px;
     padding-bottom: 188px;
     background-image: linear-gradient(to bottom,rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
-        url(/images/people-office1.jpg);
+        url(/images/people.jpg);
     background-repeat: no-repeat;
     background-size: 1440px;
     background-position: center;
