--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,8 @@ a {
 .nav-type {
     display: flex;
     align-items: center;
+    padding-bottom: 20px;
+    padding-top: 24px;
 }
 
 .nav-ul {
@@ -135,20 +137,21 @@ a {
 }
 
 .nav-menu {
-    display: flex;
     position: relative;
 }
-.nav-menu:hover::after {
+.nav-menu::after {
     border-radius: 2px;
-    width: 48px;
+    width: 100%;
     height: 4px;
     content: "";
     background-color: #404bbf;
-    color: #404bbf;
-    gap: 20px;
     position: absolute;
     bottom: 0;
-    left: 0;;
+    left: 0;
+    
+}
+.nav-menu:hover {
+    color: #404bbf;  
 }
 .address-ul {
     display: flex;
