--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,7 @@ img {
 .button-set:hover,
 .button-set:focus {
     background-color: #404bbf;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 ul, ol {
@@ -119,7 +118,10 @@ a {
     align-items: center;
 }
 .header-flex {
-    border-bottom: 1px solid #e7e9fc
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
+    0px 1px 1px rgba(46, 47, 66, 0.16), 
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .nav-type {
     display: flex;
@@ -138,6 +140,7 @@ a {
 
 .nav-menu {
     position: relative;
+    color: #404bbf;
 }
 .nav-menu::after {
     border-radius: 2px;
@@ -146,12 +149,14 @@ a {
     content: "";
     background-color: #404bbf;
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     
 }
 .nav-menu:hover {
-    color: #404bbf;  
+    color: #404bbf;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);  
 }
 .address-ul {
     display: flex;
@@ -213,7 +218,6 @@ address {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
-    margin-top: 8px;
 }
 
 .features-items {
@@ -227,6 +231,8 @@ address {
     height: 112px;
     align-items: center;
     justify-content: center;
+    background-color: #f4f4fd;
+    margin-bottom: 8px;
 }
 .features-text {
     font-size: 16px;
@@ -283,6 +289,7 @@ address {
 }
 .team-social {
     display: flex;
+    justify-content: center;
     width: 232px;
     height: 40px;
     margin: auto;
@@ -292,13 +299,18 @@ address {
 .team-icons {
     width: 40px;
     height: 40px;
+}
+.team-icons-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
-.team-icons:hover {
+.team-icons-link:hover,
+.team-icons-link:focus {
     background-color: #404bbf;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -325,22 +337,28 @@ address {
 }
 .portfolio-items {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .image-div {
     overflow: hidden;
     position: relative;
 }
-.portfolio-items-overlay {
+
+.overlay-description {
+    color: #f4f4fd;
     position: absolute;
     top: 0;
-    left: 0;
-    width: 360px;
-    height: 300px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 40px 32px;
+    height: 100%;
+    width: 100%;
     transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #4d5ae5;
-    display: flex;
 }
-.portfolio-items:hover .portfolio-items-overlay {
+.portfolio-items:hover .overlay-description {
     transform: translateY(0);
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -352,11 +370,7 @@ address {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.overlay-description {
-    padding-top: 40px;
-    padding-left: 32px;
-    color: #f4f4fd;
-}
+
 .portfolio-app {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
@@ -378,9 +392,10 @@ address {
     line-height: 1.17;
     letter-spacing: 0.03em;
 }
-.footer-div .logo-type {
-    display: inline-block;
+.footer-div {
+    display: flex;
     margin-bottom: 16px;
+    align-items: baseline;
 }
 .studio-color-footer {
     color: #f4f4fd;
@@ -394,17 +409,25 @@ address {
     letter-spacing: 0.02em;
     max-width: 264px;
 }
-
-.footer-social-media-icons {
-    width: 208px;
+.footer-social-media {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+.footer-social-media-list {
+    width: 40px;
     height: 40px;
+}
+.footer-flex {
     display: flex;
-    margin-top: 16px;
     gap: 16px;
 }
 .footer-icons {
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
     display: flex;
@@ -414,10 +437,14 @@ address {
 .footer-icons-social {
     fill: #f4f4fd;
 }
-.footer-icons:hover {
+.footer-icons:hover,
+.footer-icons:focus {
     background-color:  #31d0aa;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-logo {
+    margin-right: 120px;
 }
 .section {
     padding-top: 188px;
@@ -448,16 +475,12 @@ address {
     background-image: linear-gradient(to bottom,rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
         url(/images/people.jpg);
     background-repeat: no-repeat;
-    background-size: 1440px;
     background-position: center;
+    max-width: 1440px;
+    background-size: cover;
 } 
 .section-two {
     padding-top: 120px;
     padding-bottom: 120px;
     background-color: #fff;
-}
-.footer-flex {
-    display: flex;
-    flex-direction: row;
-    gap: 120px;
 }
