--- a/css/styles.css
+++ b/css/styles.css
@@ -478,6 +478,7 @@ address {
     background-position: center;
     max-width: 1440px;
     background-size: cover;
+    margin: auto;
 } 
 .section-two {
     padding-top: 120px;
