--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ img {
     min-width: 169px;
     height: 56px;
     cursor: pointer;
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .button-set:hover,
@@ -141,6 +142,7 @@ a {
 .nav-menu {
     position: relative;
     color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-menu::after {
     border-radius: 2px;
@@ -174,6 +176,7 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-type:hover,
 .address-type:focus {
@@ -433,6 +436,7 @@ address {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icons-social {
     fill: #f4f4fd;
