--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ img {
     min-width: 169px;
     height: 56px;
     cursor: pointer;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .button-set:hover,
@@ -264,7 +264,9 @@ address {
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 
     0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-
+.team-list-div {
+    
+}
 .team-list {
     display: flex;
     padding: 0;
@@ -423,6 +425,7 @@ address {
 .footer-social-media-list {
     width: 40px;
     height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-flex {
     display: flex;
