--- a/css/styles.css
+++ b/css/styles.css
@@ -439,7 +439,7 @@ address {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icons-social {
     fill: #f4f4fd;
