--- a/css/styles.css
+++ b/css/styles.css
@@ -137,14 +137,24 @@ a {
     gap: 40px;
     margin: 0;
     padding: 0;
+    color: #2e2f42;
 }
 
 .nav-menu {
-    position: relative;
-    color: #404bbf;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-menu::after {
+
+.menu-studio {
+    color: #404bbf;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 24px 0;
+    position: relative;
+}   
+
+.menu-studio::after {
     border-radius: 2px;
     width: 100%;
     height: 4px;
