--- a/css/styles.css
+++ b/css/styles.css
@@ -140,9 +140,6 @@ a {
     color: #2e2f42;
 }
 
-.nav-menu {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .menu-studio {
     color: #404bbf;
@@ -152,6 +149,7 @@ a {
     letter-spacing: 0.02em;
     padding: 24px 0;
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }   
 
 .menu-studio::after {
@@ -273,6 +271,7 @@ address {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 
     0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-list-div {
     
