--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,7 @@ address {
     border-radius: 50%;
     justify-content: center;
     align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-icons-link:hover,
 .team-icons-link:focus {
