--- a/css/styles.css
+++ b/css/styles.css
@@ -409,7 +409,6 @@ address {
 }
 .footer-div {
     display: flex;
-    margin-bottom: 16px;
     align-items: baseline;
 }
 .studio-color-footer {
@@ -490,7 +489,7 @@ address {
     padding-top: 188px;
     padding-bottom: 188px;
     background-image: linear-gradient(to bottom,rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
-        url(/images/people.jpg);
+        url(../images/people.jpg);
     background-repeat: no-repeat;
     background-position: center;
     max-width: 1440px;
